--- a/src/components/maquillajes/Novias.astro
+++ b/src/components/maquillajes/Novias.astro
@@ -3,7 +3,7 @@
     <div class="bg-[#fcefe9] w-full pt-16" itemprop="hasOfferCatalog" itemscope itemtype="https://schema.org/OfferCatalog">
         <div class="mx-auto w-full max-w-screen-xl px-4 sm:px-6 lg:px-8 py-6 md:py-10 lg:py-12">
             <div class="w-full bg-white p-4 md:p-6 rounded-lg shadow-lg mb-6 md:mb-8 lg:mb-10">
-                <h2 class="text-2xl md:text-4xl font-bold text-center text-black/70">Maquillaje para Novias</h2>
+                <h2 class="text-2xl md:text-4xl font-bold text-center text-black/80">Maquillaje para Novias</h2>
             </div>
             
             <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
@@ -22,7 +22,7 @@
     
                 <!-- Contenido -->
                 <div itemscope itemtype="https://schema.org/Offer">
-                    <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3" itemprop="name">Paquete Premium para Novias</h1>
+                    <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-black/80 mb-2 md:mb-3" itemprop="name">Paquete Premium<br><span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Novias</span></h1>
                     <p class="text-gray-600 font-semibold mb-6">$690.000</p>
     
                     <!-- Menú horizontal -->
@@ -35,7 +35,7 @@
                             aria-controls="tab1-content"
                             id="tab1-tab"
                         >
-                            Maquillaje + Peinado ($430.000)
+                            Dia del Evento ($430.000)
                         </button>
                         <button 
                             class="tab-btn px-3 py-2 md:px-4 md:py-2 rounded-lg font-semibold bg-gray-200 text-gray-800 text-sm md:text-base" 
@@ -58,7 +58,9 @@
                             role="tabpanel" 
                             aria-labelledby="tab1-tab"
                             itemprop="description">
-
+                            
+                            <h3 class="font-semibold text-lg"><strong>Día del evento 
+                                (Maquillaje y peinado Novia)</strong><h3/>
                             <p class="mt-2 font-semibold">Duración del servicio: <span itemprop="hoursAvailable">3 horas</span> aprox</p>
                             <p class="mt-2">¡El día de tu boda serás el centro de atención, por eso tu styling debe estar en manos de expertas!</p>
                             <p class="mt-2">El día de la boda hay muchas emociones juntas, por eso todo hay que planearlo con anterioridad, para no dejar nada a la improvisación.</p>
@@ -95,7 +97,7 @@
                             aria-labelledby="tab2-tab"
                             itemprop="description">
 
-                            <h3 class="font-semibold text-lg">Prueba Premium para Novias</h3>
+                            <h3 class="font-semibold text-lg"> <strong>Prueba Premium para la Novia (Maquillaje y Peinado)</strong></h3>                            
                             <p class="mt-2">Es ideal realizar una prueba de maquillaje y peinado, que será de gran ayuda porque evitarás sorpresas desagradables y tendrás la certeza de cómo lucirás.</p>
                             <p class="mt-2">Recomendamos que te lo realices, de esta manera estarás segura del look que llevarás uno de los días más importantes de tu vida.</p>
                             
@@ -152,7 +154,7 @@
     
                 <!-- Contenido -->
                 <div itemscope itemtype="https://schema.org/Offer">
-                    <h1 class="text-2xl md:text-4xl font-bold text-gray-800 mb-2" itemprop="name">Paquete Oro para Novias</h1>
+                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Oro <br><span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Novias</span></h1>
                     <p class="text-gray-600 font-semibold mb-6">$890.000</p>
     
                     <!-- Menú horizontal -->
