--- a/src/components/maquillajes/Quince.astro
+++ b/src/components/maquillajes/Quince.astro
@@ -3,7 +3,7 @@
     <div class="bg-[#fcefe9] w-full pt-16" itemprop="hasOfferCatalog" itemscope itemtype="https://schema.org/OfferCatalog">
         <div class="mx-auto w-full max-w-screen-xl px-4 sm:px-6 lg:px-8 py-6 md:py-10 lg:py-12">
             <div class="w-full bg-white p-4 md:p-6 rounded-lg shadow-lg mb-6 md:mb-8 lg:mb-10">
-                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-center text-black/70">Maquillaje Quinceañeras</h2>
+                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-center text-black/80">Maquillaje & Peinado Quinceañeras</h2>
             </div>
             
             <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
@@ -22,7 +22,7 @@
     
                 <!-- Contenido -->
                 <div itemscope itemtype="https://schema.org/Offer">
-                    <h1 class="text-2xl md:text-4xl font-bold text-gray-800 mb-2" itemprop="name">Paquete Premium</h1>
+                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Premium <br> <span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Quinceañeras</span></h1>
                     <p class="text-gray-600 font-semibold mb-6">$540.000</p>
             
                     <!-- Menú horizontal -->
@@ -35,7 +35,7 @@
                             aria-controls="tab1-content"
                             id="tab1-tab"
                         >
-                            Maquillaje + Peinado ($290.000)
+                           Dia del Evento ($290.000)
                         </button>
                         <button 
                             class="tab-btn px-4 py-2 rounded-lg font-semibold bg-gray-200 text-gray-800" 
@@ -58,8 +58,10 @@
                             role="tabpanel" 
                             aria-labelledby="tab1-tab"
                             itemprop="description"
-                        >
-                            <p class="mt-2 font-semibold">Duración del maquillaje y peinado aprox de 8 a 10 horas.</p>
+                            >
+                            <h3 class="font-semibold text-lg"><strong>Día del evento 
+                            (Maquillaje y peinado Quinceañera)</strong><h3/>
+                            <p class="mt-2 font-semibold">Duración del maquillaje y peinado aprox de 8 a 10 horas.</p>                         
                             <p class="mt-2">¡El día de los 15 años la niña será el centro de atención, por eso su styling debe estar en manos de expertas!</p>
                             <p class="mt-2">El maquillaje y peinado Premium de quinceañeras busca resaltar su belleza natural y que se sigan viendo igual de jóvenes.</p>
                             
@@ -88,6 +90,7 @@
                             aria-labelledby="tab2-tab"
                             itemprop="description"
                         >
+                            <h3 class="font-semibold text-lg"><strong>Prueba Premium para la Quinceañera (Maquillaje y Peinado)</strong><h3/>
                             <p class="mt-2">Es ideal realizar una prueba de maquillaje y peinado, que será de gran ayuda porque evitarás sorpresas desagradables y tendrás la certeza de cómo lucirás.</p>
                             <p class="mt-2">Recomendamos que la niña se lo realice, de esta manera la quinceañera como la mamá estén seguras del look que se va a llevar el día de los 15.</p>
                             <p class="mt-2">Ese día realizamos un análisis de imagen de Quinceañera y le realizamos el maquillaje y peinado que llevaría el día de los 15, también se realizan los ajustes necesarios para que queden completamente satisfechas.</p>
@@ -136,7 +139,7 @@
     
                 <!-- Contenido -->
                 <div itemscope itemtype="https://schema.org/Offer">
-                    <h1 class="text-2xl md:text-4xl font-bold text-gray-800 mb-2" itemprop="name">Paquete Luxury</h1>
+                    <h1 class="text-2xl md:text-4xl font-bold text-black/80 mb-2" itemprop="name">Paquete Luxury <br> <span class="text-xl md:text-3xl font-bold text-black/50 mb-2">Quinceañeras</span></h1>
                     <p class="text-gray-600 font-semibold mb-6">$610.000</p>
             
                     <!-- Menú horizontal -->
@@ -149,7 +152,7 @@
                             aria-controls="tab3-content"
                             id="tab3-tab"
                         >
-                            Maquillaje + Peinado ($350.000)
+                            Dia del Evento ($350.000)
                         </button>
                         <button 
                             class="tab-btn px-4 py-2 rounded-lg font-semibold bg-gray-200 text-gray-800" 
@@ -173,6 +176,8 @@
                             aria-labelledby="tab3-tab"
                             itemprop="description"
                         >
+                            <h3 class="font-semibold text-lg"><strong>Día del evento 
+                            (Maquillaje y peinado Quinceañera)</strong><h3/>
                             <p class="mt-2 font-semibold">Duración del servicio 4 horas aprox</p>
                             <p class="mt-2">Esta técnica de maquillaje con piel blindada con Aerografía está revolucionando el mercado y cada día está más en tendencia.</p>
                             <p class="mt-2">Esta técnica de Piel Blindada con Aerografía promete una piel muy resistente a la fricción, al sudor, es a prueba de agua y lágrimas, lo que te garantiza mayor durabilidad.</p>
@@ -204,6 +209,7 @@
                             aria-labelledby="tab4-tab"
                             itemprop="description"
                         >
+                            <h3 class="font-semibold text-lg"><strong>Prueba Luxury para la Quinceañera (Maquillaje y Peinado)</strong><h3/>
                             <p class="mt-2">Es ideal realizar una prueba de maquillaje y peinado, que será de gran ayuda porque evitarás sorpresas desagradables y tendrás la certeza de cómo lucirás.</p>
                             <p class="mt-2">Recomendamos a que la niña se lo realice, de esta manera la quinceañera como la mamá estén seguras del look que se va a llevar el día de los 15.</p>
                             <p class="mt-2">Ese día realizamos un análisis de imagen de Quinceañera y le realizamos el maquillaje y peinado que llevaría el día de los 15, también se realizan los ajustes necesarios para que queden completamente satisfechas.</p>
