--- a/src/components/maquillajes/Social.astro
+++ b/src/components/maquillajes/Social.astro
@@ -62,10 +62,11 @@
                             aria-labelledby="tab1-tab"
                             itemprop="description"
                         >
+                            <p>Este tipo de maquillaje es ideal para asistir a un <strong>evento social</strong>, de <strong>oficina</strong> o incluso para el <strong>día de tu grado</strong>, duración es de 8 a 10 horas aprox.</p>
                             <p>El maquillaje Premium Social tiene como objetivo destacar tu belleza y facciones logrando así equilibrio con el estilo que vayas a utilizar y con tu personalidad.</p>
                             <p>Existen dos tipos de maquillajes sociales, para el día y para la noche.</p>
                             <p>El Maquillaje premium de día es más natural, más fresco, generalmente sin brillos, mientras que el Maquillaje premium para la noche es más atrevido, aporta más energía en sus colores, pueden tener brillos y hasta pedrería.</p>
-                            <p>Este tipo de maquillaje es ideal para asistir a un evento social, de oficina o incluso para el día de tu grado, duración es de 8 a 10 horas aprox.</p>
+                            
                         </div>
                         
                         <!-- Contenido 2 - Oculto por defecto -->
@@ -86,6 +87,7 @@
                                 <li>Hidratación de labios</li>
                                 <li>Maquillaje de día o noche previamente elegido por ti, acompañado de la asesoría de nuestra maquilladora.</li>
                                 <li>Fijador para mayor durabilidad</li>
+                                <li>Pestañas de tira o punto a punto</li>
                             </ul>
                         </div>
                     </div>
@@ -132,8 +134,8 @@
                     <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3" itemprop="name">Maquillaje Luxury</h1>
                     <p class="text-gray-600 font-semibold mb-2 md:mb-3">Piel Blindada con Aerografía</p>
                     <p class="text-gray-600 font-semibold mb-4 md:mb-6">
-                        <span itemprop="hoursAvailable">45 a 60 min aprox</span><br>
-                        <span itemprop="price">$143.000</span> - <span class="font-bold">No incluye Peinado</span>
+                        <span itemprop="hoursAvailable">60 a 90 min aprox</span><br>
+                        <span itemprop="price">$190.000</span> - <span class="font-bold">No incluye Peinado</span>
                     </p>
             
                     <!-- Menú horizontal -->
