--- a/src/components/index/3-Servicios.astro
+++ b/src/components/index/3-Servicios.astro
@@ -23,8 +23,8 @@
         </figure>
         
         <div class="card-body items-center text-center p-4">
-          <h2 class="card-title text-[#d45d3a]">Maquillaje Social</h2>
-          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Realza tu belleza natural con expertos"</p>
+          <h2 class="card-title text-black/70">Maquillaje Social</h2>
+          <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Realza tu belleza natural con expertos"</p>
           <p class="text-gray-700">Transformación profesional para eventos especiales, destacando tus mejores facciones.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -51,12 +51,12 @@
             decoding="async" />
         </figure>
         <div class="card-body items-center text-center p-4">
-          <h2 class="card-title text-[#d45d3a]">Maquillaje Quinceañeras</h2>
-          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Brillo y magia para tu gran día"</p>
+          <h2 class="card-title text-black/70">Maquillaje Quinceañeras</h2>
+          <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Brillo y magia para tu gran día"</p>
           <p class="text-gray-700">Diseño exclusivo para resaltar tu personalidad en esta celebración única.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
-              <a href="/MQuinceañeras">Más información</a>
+              <a href="/MQuince">Más información</a>
             </button>
             <a href="http://wa.me/573165246636" target="_blank" class="btn bg-[#999999] hover:bg-[#666666] border-none text-white flex items-center gap-2">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -79,8 +79,8 @@
             decoding="async" />
         </figure>
         <div class="card-body items-center text-center p-4">
-          <h2 class="card-title text-[#d45d3a]">Maquillaje Novias</h2>
-          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Belleza eterna para tu día perfecto"</p>
+          <h2 class="card-title text-black/70">Maquillaje Novias</h2>
+          <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Belleza eterna para tu día perfecto"</p>
           <p class="text-gray-700">Look radiante y duradero que resaltará en tus fotos y durante toda la celebración.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -107,8 +107,8 @@
             decoding="async" />
         </figure>
         <div class="card-body items-center text-center p-4">
-          <h2 class="card-title text-[#d45d3a]">Peinados</h2>
-          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Estilo que complementa tu esencia"</p>
+          <h2 class="card-title text-black/70">Peinados</h2>
+          <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Estilo que complementa tu esencia"</p>
           <p class="text-gray-700">Desde recogidos elegantes hasta sueltos románticos, creamos el look ideal para ti.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -135,8 +135,8 @@
             decoding="async" />
         </figure>
         <div class="card-body items-center text-center p-4">
-          <h2 class="card-title text-[#d45d3a]">Escuela de alma</h2>
-          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Formación profesional en belleza"</p>
+          <h2 class="card-title text-black/70">La Escuela de alma</h2>
+          <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Formamos artistas con técnica, pasión y propósito."</p>
           <p class="text-gray-700">Conviértete en experto con nuestro programa completo de maquillaje y estilismo.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white ">
