--- a/src/components/index/2-Banner.astro
+++ b/src/components/index/2-Banner.astro
@@ -10,9 +10,9 @@
                         <img src="/CarruselHeader1.webp" class="w-full h-auto max-h-[300px] md:max-h-none md:h-full object-contain md:object-cover object-top" alt="Maquillaje profesional"/>
                     </div>
                     <div class="w-full max-md:text-center md:w-1/2 flex flex-col justify-center p-4 md:p-8 bg-white order-1 md:order-2">
-                        <h2 class="text-2xl md:text-3xl font-bold text-black/70 mb-2">Alma MakeUp</h2>
+                        <h2 class="text-2xl md:text-3xl font-bold text-black/70 mb-2">Alma Makeup</h2>
                         <p class="text-black/50 mb-4 text-sm md:text-base">
-                            Maquillaje y Peinado Premium a domicilio en Bogotá.
+                            Maquillaje y peinado premium a domicilio en Bogotá.
                         </p>
                         <div class="inline-block">
                             <a href="http://wa.me/573165246636" class="btn bg-[#f5a28c] hover:bg-[#e89179] shadow-md hover:shadow-sm border-none text-black/50 gap-2  justify-center items-center max-md:w-fit max-md:mx-auto" target="_blank">
@@ -35,7 +35,7 @@
                     <div class="w-full md:w-1/2 flex flex-col justify-center p-4 max-md:text-center md:p-8 bg-white order-1 md:order-2">
                         <h2 class="text-2xl md:text-3xl font-bold text-black/70 mb-2">Eventos Especiales</h2>
                         <p class="text-black/50 mb-4 text-sm md:text-base">
-                            Transformamos tu imagen con maquillaje profesional.
+                            Transformamos tu imagen con maquillaje y peinado profesional.
                         </p>
                         <div class="inline-block">
                             <a href="http://wa.me/573165246636" class="btn bg-[#f5a28c] hover:bg-[#e89179] shadow-md hover:shadow-sm border-none text-black/50 gap-2 justify-center items-center max-md:w-fit max-md:mx-auto" target="_blank">
@@ -58,7 +58,7 @@
                     <div class="w-full md:w-1/2 flex flex-col justify-center p-4 md:p-8 bg-white order-1 md:order-2 max-md:text-center">
                         <h2 class="text-2xl md:text-3xl font-bold text-black/70 mb-2">Vamos a Domicilio</h2>
                         <p class="text-black/50 mb-4 text-sm md:text-base">
-                            Maquillaje profesional en la comodidad de tu hogar.
+                            Maquillaje y peinado profesional en la comodidad de tu hogar.
                         </p>
                         <div class="inline-block">
                             <a href="http://wa.me/573165246636" class="btn bg-[#f5a28c] hover:bg-[#e89179] shadow-md hover:shadow-sm border-none text-black/50 gap-2  justify-center items-center max-md:w-fit max-md:mx-auto" target="_blank">
