--- a/src/components/index/3-Servicios.astro
+++ b/src/components/index/3-Servicios.astro
@@ -4,7 +4,7 @@
     <div class="w-full bg-white p-4 md:p-6 rounded-lg shadow-lg mb-6 md:mb-8">
       <h2 class="text-2xl md:text-4xl font-bold text-center mb-4 md:mb-6 text-black/70">Servicios</h2>
       <p class="text-center text-black/50 text-sm md:text-lg max-w-3xl mx-auto px-2 md:px-4 italic">
-        Donde la belleza se encuentra con la perfección: maquillaje artístico y peinados 
+        Donde la belleza se encuentra con la perfección: maquillajes y peinados 
         de alta calidad que destacan tu esencia en cada evento importante de tu vida.
       </p>
     </div>
@@ -24,7 +24,7 @@
         
         <div class="card-body items-center text-center p-4">
           <h2 class="card-title text-black/70">Maquillaje Social</h2>
-          <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Realza tu belleza natural con expertos"</p>
+          <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Realza tu belleza natural con expertas"</p>
           <p class="text-gray-700">Transformación profesional para eventos especiales, destacando tus mejores facciones.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -51,7 +51,7 @@
             decoding="async" />
         </figure>
         <div class="card-body items-center text-center p-4">
-          <h2 class="card-title text-black/70">Maquillaje Quinceañeras</h2>
+          <h2 class="card-title text-black/70">Maquillaje y Peinado Quinceañeras</h2>
           <p class="text-sm font-Montserrat-Italic text-[#d45d3a] mb-2">"Brillo y magia para tu gran día"</p>
           <p class="text-gray-700">Diseño exclusivo para resaltar tu personalidad en esta celebración única.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
