--- a/src/components/index/2-Banner.astro
+++ b/src/components/index/2-Banner.astro
@@ -1,5 +1,5 @@
 <section class="w-full bg-[#ffe1d6] mt-24 max-lg:mt-20 pb-6">
-    <div class="carousel-container relative max-w-[1500px] mx-auto h-auto md:h-[400px] overflow-hidden rounded-lg shadow-xl bg-white">
+    <div class="carousel-container relative max-w-[1500px] mx-auto h-auto md:h-[400px] overflow-hidden rounded-lg shadow-xl bg-white pt-4">
         <!-- Carrusel Track -->
         <div class="carousel-track flex h-full transition-transform duration-500 ease-in-out">
             <!-- Slide 1 -->
