--- a/src/components/header-footer/1-Header.astro
+++ b/src/components/header-footer/1-Header.astro
@@ -51,9 +51,9 @@
                 <div>
                     <p class="hover:bg-[#FFB4A2] px-4 py-2 text-black" aria-haspopup="true" aria-expanded="false">Maquillajes</p>
                     <ul class="p-2 bg-white" role="menu">
-                        <li><a href="/MSocial" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Maquillaje Social</a></li>
-                        <li><a href="/MQuince" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Maquillaje para Quinceañeras</a></li>
-                        <li><a href="/MNovias" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem">Maquillaje para Novias</a></li>
+                        <li><a href="/MSocial" class="hover:bg-[#FFB4A2] px-4 py-2 text-black whitespace-normal" role="menuitem">Maquillaje Social</a></li>
+                        <li><a href="/MQuince" class="hover:bg-[#FFB4A2] px-4 py-2 text-black whitespace-normal" role="menuitem">Maquillaje para Quinceañeras</a></li>
+                        <li><a href="/MNovias" class="hover:bg-[#FFB4A2] px-4 py-2 text-black whitespace-normal" role="menuitem">Maquillaje para Novias</a></li>
                     </ul>
                 </div>
             </li>
