--- a/src/components/escuela/curso.astro
+++ b/src/components/escuela/curso.astro
@@ -3,7 +3,7 @@
     <div class="w-full pt-16">
         <div class="mx-auto w-full max-w-screen-xl px-4 py-6 sm:px-6 sm:py-24 lg:px-8 lg:py-12">
             <div class="w-full bg-white p-4 md:p-6 rounded-lg shadow-lg mb-6 md:mb-8 lg:mb-10">
-                <h2 class="text-2xl md:text-4xl font-bold text-center text-black/70">Cursos</h2>
+                <h2 class="text-2xl md:text-4xl font-bold text-center text-black/70">Cursos de Maquillaje y Peinados</h2>
             </div>
             <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
                 <!-- Imagen -->
@@ -13,7 +13,7 @@
         
                 <!-- Contenido -->
                 <div>
-                    <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3">Maquillaje con Aerografía</h1>
+                    <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3">Curso de Maquillaje con Aerografía</h1>
                     <p class="text-gray-600 font-semibold mb-6">32 horas, 8 clases: $900.000</p>
             
                     <!-- Menú horizontal -->
@@ -156,8 +156,8 @@
         
                 <!-- Contenido -->
                 <div>
-                    <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3">Maquillaje de Fantasía</h1>
-                    <p class="text-gray-600 font-semibold mb-6">32h, 8 clases: $800.000</p>
+                    <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3">Curso de Maquillaje de Fantasía</h1>
+                    <p class="text-gray-600 font-semibold mb-6">32h, 8 clases: $900.000</p>
             
                     <!-- Menú horizontal -->
                     <div class="flex gap-2 mb-3 md:mb-4">
@@ -305,7 +305,7 @@
                 <!-- Contenido -->
                 <div>
                     <h1 class="text-2xl md:text-3xl lg:text-4xl font-bold text-gray-800 mb-2 md:mb-3">
-                        Peinados Profesionales</h1>
+                        Curso de Peinados Profesionales</h1>
                     <p class="text-gray-600 font-semibold mb-6">48h, 16 clases: $900.000</p>
             
                     <!-- Menú horizontal -->
