--- a/src/components/escuela/taller.astro
+++ b/src/components/escuela/taller.astro
@@ -3,7 +3,7 @@
     <article class="w-full pt-16">
         <div class="mx-auto w-full max-w-screen-xl px-4 py-6 sm:px-6 sm:py-24 lg:px-8 lg:py-12">
             <header class="w-full bg-white p-4 md:p-6 rounded-lg shadow-lg mb-6 md:mb-8 lg:mb-10">
-                <h2 class="text-2xl md:text-4xl font-bold text-center text-black/70">Talleres</h2>
+                <h2 class="text-2xl md:text-4xl font-bold text-center text-black/70">Talleres de Automaquillaje</h2>
             </header>
             
             <div class="grid grid-cols-1 gap-6 sm:gap-8 md:gap-10 lg:grid-cols-2 lg:items-center lg:gap-12">
