--- a/src/components/maquillajes/Novias.astro
+++ b/src/components/maquillajes/Novias.astro
@@ -191,6 +191,8 @@
                             aria-labelledby="tab3-tab"
                             itemprop="description"
                         >
+                            <h3 class="font-semibold text-lg"><strong>Prueba de Oro
+                            (Maquillaje y peinado Novia)</strong><h3/>
                             <p class="mt-2 font-semibold">Duración del servicio: <span itemprop="hoursAvailable">4 horas</span> aprox</p>
                             <p class="mt-2">¡El día de tu boda serás el centro de atención, por eso tu styling debe estar en manos de expertas!</p>
                             
